--- a/report.Rmd
+++ b/report.Rmd
@@ -46,41 +46,45 @@ tab <- xtable(summary(df))
 print(tab, type="html")
 ```
 
-<h4>GC Timeline</h4>
-You can also embed plots, for example:
 
+
+
+
+<h4>GC Timeline</h4>
 ```{r fig.width=15, fig.height=6, echo = FALSE}
 plotGC2(data.gc)
 ```
 
-<h4>Histogram</h4>>
-
-```{r fig.width=10, fig.height=6, echo = FALSE}
+<h4>Histogram</h4>
+```{r fig.width=10, results="asis", fig.height=6, echo = FALSE}
 histo2(data.gc)
 ```
 
-<h4>OldGen Occupation</h4>>
+<h4>OldGen Occupation</h4>
 
 ```{r fig.width=10, fig.height=6, echo = FALSE}
 sizeoldPlot(data.gc)
 ```
 
-<h4>YoungGen Occupation Size</h4>>
+<h4>YoungGen Occupation Size</h4>
 
 ```{r fig.width=10, fig.height=6, echo = FALSE}
 sizeYoungPlot(data.gc)
 ```
 
-<h4>Survivor Occupation</h4>>
+<h4>Survivor Occupation</h4>
 ```{r fig.width=10, fig.height=6, echo = FALSE}
 survPlot(data.gc)
 ```
 
-<h4>Occupation Overview</h4>>
+<h4>Occupation Overview</h4>
 
 ```{r fig.width=10, fig.height=6, echo = FALSE}
 occupation(data.gc)
 ```
+
+
+
 
 <h4>Old TimeSeries</h4>
 
@@ -99,7 +103,6 @@ plotGCseries_Young(data.gc)
 ```{r fig.width=10, fig.height=6, echo = FALSE}
 plotGCseries_Survivor(data.gc)
 ```
-
 
 ```{r fig.width=10,results="asis", fig.height=6, echo = FALSE}
 #dd <- data.frame(v1=data.gc$timestamp,v2=data.gc$pause.time,v3=data.gc$pause.time)
